--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sofia's Grandmaster Chess</title>
+    <title>Sofia's Ultimate Grandmaster Chess</title>
     <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
     <style>
-        body { font-family: 'Segoe UI', sans-serif; background: #121212; color: white; margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
-        .menu-container { width: 100%; max-width: 400px; text-align: center; background: #1e1e1e; padding: 20px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); margin-bottom: 15px; }
-        h2 { color: #3498db; margin: 0 0 20px 0; }
-        input#roomCode { width: 85%; padding: 12px; margin-bottom: 20px; border-radius: 8px; border: 2px solid #333; background: #252525; color: white; font-size: 18px; text-align: center; outline: none; }
+        body { font-family: 'Segoe UI', sans-serif; background: #0f0f0f; color: white; margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
+        .menu-container { width: 100%; max-width: 400px; text-align: center; background: #1e1e1e; padding: 20px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); margin-bottom: 15px; border: 1px solid #333; }
+        h2 { color: #f1c40f; margin: 0 0 20px 0; text-transform: uppercase; letter-spacing: 2px; }
+        input#roomCode { width: 85%; padding: 12px; margin-bottom: 20px; border-radius: 8px; border: 2px solid #444; background: #252525; color: white; font-size: 18px; text-align: center; outline: none; }
         .btn-stack { display: flex; flex-direction: column; gap: 10px; }
-        button { padding: 15px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 16px; transition: 0.3s; }
+        button { padding: 15px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 16px; transition: 0.3s; text-transform: uppercase; }
         #createBtn { background: #2980b9; color: white; }
         #joinBtn { background: #27ae60; color: white; }
-        #botBtn { background: #e67e22; color: white; }
-        #myBoard { width: 95vw; max-width: 400px; border: 4px solid #333; border-radius: 5px; }
-        #status-bar { margin-top: 15px; padding: 10px; background: #333; width: 90%; max-width: 380px; text-align: center; border-radius: 5px; font-size: 14px; color: #f1c40f; }
+        #botBtn { background: #c0392b; color: white; border: 2px solid #e74c3c; }
+        #myBoard { width: 95vw; max-width: 400px; border: 5px solid #333; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.5); }
+        #status-bar { margin-top: 15px; padding: 12px; background: #222; width: 90%; max-width: 380px; text-align: center; border-radius: 8px; font-size: 14px; color: #f1c40f; border: 1px solid #444; }
     </style>
 </head>
 <body>
 
     <div class="menu-container">
-        <h2>Sofia's Chess Engine</h2>
-        <input type="text" id="roomCode" placeholder="4-Digit Code">
+        <h2>Grandmaster Engine</h2>
+        <input type="text" id="roomCode" placeholder="Enter 4-Digit Code">
         <div class="btn-stack">
             <button id="createBtn" onclick="handleOnline('create')">Create Room</button>
             <button id="joinBtn" onclick="handleOnline('join')">Join Online</button>
-            <button id="botBtn" onclick="startBot()">Play vs Pro Bot</button>
+            <button id="botBtn" onclick="startBot()">Play vs Ultimate Bot</button>
         </div>
     </div>
 
     <div id="myBoard"></div>
-    <div id="status-bar">Status: Ready to Play</div>
+    <div id="status-bar">Status: System Ready</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
@@ -46,38 +46,51 @@
         var currentRoom = null;
         var isBotMode = false;
 
-        // --- ULTRA POWERFUL BOT LOGIC ---
-        var weights = { p: 10, n: 30, b: 30, r: 50, q: 90, k: 900 };
+        // --- ULTIMATE BOT ENGINE ---
+        var reverseArray = function(array) { return array.slice().reverse(); };
+        var pawnEval = [ [0,0,0,0,0,0,0,0],[5,5,5,5,5,5,5,5],[1,1,2,3,3,2,1,1],[0.5,0.5,1,2.5,2.5,1,0.5,0.5],[0,0,0,2,2,0,0,0],[0.5,-0.5,-1,0,0,-1,-0.5,0.5],[0.5,1,1,-2,-2,1,1,0.5],[0,0,0,0,0,0,0,0] ];
+        var knightEval = [ [-5,-4,-3,-3,-3,-3,-4,-5],[-4,-2,0,0,0,0,-2,-4],[-3,0,0.5,1.5,1.5,0.5,0,-3],[-3,0.5,1,2,2,1,0.5,-3],[-3,0,1,2,2,1,0,-3],[-3,0.5,0.5,1.5,1.5,0.5,0.5,-3],[-4,-2,0,0.5,0.5,0,-2,-4],[-5,-4,-3,-3,-3,-3,-4,-5] ];
+
+        function getPieceValue(piece, x, y) {
+            if (piece === null) return 0;
+            var getAbsoluteValue = function (p, isWhite, x, y) {
+                if (p.type === 'p') return 10 + (isWhite ? pawnEval[y][x] : pawnEval[7-y][x]);
+                if (p.type === 'r') return 50;
+                if (p.type === 'n') return 30 + knightEval[y][x];
+                if (p.type === 'b') return 30;
+                if (p.type === 'q') return 90;
+                if (p.type === 'k') return 900;
+                return 0;
+            };
+            return piece.color === 'w' ? -getAbsoluteValue(piece, true, x, y) : getAbsoluteValue(piece, false, x, y);
+        }
 
         function evaluateBoard(game) {
-            let total = 0;
-            game.board().forEach(row => {
-                row.forEach(p => {
-                    if (p) total += (p.color === 'b' ? weights[p.type] : -weights[p.type]);
-                });
-            });
+            var total = 0;
+            for (var i=0; i<8; i++) {
+                for (var j=0; j<8; j++) { total += getPieceValue(game.board()[i][j], i, j); }
+            }
             return total;
         }
 
-        // Minimax with Alpha-Beta Pruning (Yahi ise powerful banata hai)
-        function minimax(game, depth, alpha, beta, isMaximizing) {
-            if (depth === 0) return evaluateBoard(game);
-            let moves = game.moves();
-            if (isMaximizing) {
-                let best = -9999;
-                for (let m of moves) {
-                    game.move(m);
-                    best = Math.max(best, minimax(game, depth - 1, alpha, beta, !isMaximizing));
+        function minimax(game, depth, alpha, beta, isMax) {
+            if (depth === 0) return -evaluateBoard(game);
+            var moves = game.moves();
+            if (isMax) {
+                var best = -9999;
+                for (var i=0; i<moves.length; i++) {
+                    game.move(moves[i]);
+                    best = Math.max(best, minimax(game, depth - 1, alpha, beta, !isMax));
                     game.undo();
                     alpha = Math.max(alpha, best);
                     if (beta <= alpha) break;
                 }
                 return best;
             } else {
-                let best = 9999;
-                for (let m of moves) {
-                    game.move(m);
-                    best = Math.min(best, minimax(game, depth - 1, alpha, beta, !isMaximizing));
+                var best = 9999;
+                for (var i=0; i<moves.length; i++) {
+                    game.move(moves[i]);
+                    best = Math.min(best, minimax(game, depth - 1, alpha, beta, !isMax));
                     game.undo();
                     beta = Math.min(beta, best);
                     if (beta <= alpha) break;
@@ -86,31 +99,26 @@
             }
         }
 
-        function makeProMove() {
-            let moves = game.moves();
+        function makeUltimateMove() {
+            var moves = game.moves();
             if (game.game_over()) return;
-            
-            let bestMove = null;
-            let bestValue = -9999;
 
-            moves.sort(() => Math.random() - 0.5); // Randomness for variety
+            var bestMove = null;
+            var bestValue = -9999;
 
-            for (let m of moves) {
-                game.move(m);
-                let boardValue = minimax(game, 3, -10000, 10000, false); // Depth 3 tak sochega
+            for (var i=0; i<moves.length; i++) {
+                game.move(moves[i]);
+                var boardValue = minimax(game, 2, -10000, 10000, false);
                 game.undo();
                 if (boardValue > bestValue) {
                     bestValue = boardValue;
-                    bestMove = m;
+                    bestMove = moves[i];
                 }
             }
             game.move(bestMove);
             board.position(game.fen());
-            checkGameOver();
-        }
-
-        function checkGameOver() {
-            if (game.game_over()) $('#status-bar').text("Game Over!");
+            if(game.game_over()) alert("Game Over!");
+            else $('#status-bar').text("Your turn, Sofia!");
         }
 
         function initBoard(orient) {
@@ -124,11 +132,11 @@
                     if (!isBotMode && ((playerRole === 'w' && p.startsWith('b')) || (playerRole === 'b' && p.startsWith('w')))) return false;
                 },
                 onDrop: (s, t) => {
-                    let move = game.move({ from: s, to: t, promotion: 'q' });
-                    if (!move) return 'snapback';
+                    var move = game.move({ from: s, to: t, promotion: 'q' });
+                    if (move === null) return 'snapback';
                     if (isBotMode) {
-                        $('#status-bar').text("Bot is thinking...");
-                        window.setTimeout(makeProMove, 250);
+                        $('#status-bar').text("Bot is calculating...");
+                        window.setTimeout(makeUltimateMove, 250);
                     } else {
                         socket.emit('chessMove', { move, room: currentRoom });
                     }
@@ -143,7 +151,7 @@
             isBotMode = false;
             currentRoom = code;
             socket.emit('joinRoom', { username: "Player", room: code });
-            $('#status-bar').text(type === 'create' ? "Room Created. Share code!" : "Joined!");
+            $('#status-bar').text("Joined: " + code);
         }
 
         function startBot() {
@@ -151,19 +159,11 @@
             playerRole = 'w';
             game = new Chess();
             initBoard('white');
-            $('#status-bar').text("Pro Bot Enabled. Depth: 3 Moves");
+            $('#status-bar').text("Ultimate Bot Active. Good Luck Sofia!");
         }
 
-        socket.on('playerRole', (d) => {
-            playerRole = d.role;
-            currentRoom = d.room;
-            initBoard(playerRole === 'w' ? 'white' : 'black');
-        });
-
-        socket.on('moveFromServer', (m) => {
-            game.move(m);
-            board.position(game.fen());
-        });
+        socket.on('playerRole', (d) => { playerRole = d.role; currentRoom = d.room; initBoard(playerRole === 'w' ? 'white' : 'black'); });
+        socket.on('moveFromServer', (m) => { game.move(m); board.position(game.fen()); });
 
         initBoard('white');
     </script>
