--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sofia's Ultimate Chess</title>
+    <title>Sofia's Grandmaster Chess</title>
     <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
         body { font-family: 'Segoe UI', sans-serif; background: #121212; color: white; margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
         .menu-container { width: 100%; max-width: 400px; text-align: center; background: #1e1e1e; padding: 20px; border-radius: 15px; margin-bottom: 15px; border: 1px solid #333; }
         h2 { color: #f1c40f; margin: 0 0 20px 0; }
-        input#roomCode { width: 85%; padding: 12px; margin-bottom: 20px; border-radius: 8px; border: 2px solid #444; background: #252525; color: white; font-size: 18px; text-align: center; }
+        input#roomCode { width: 85%; padding: 12px; margin-bottom: 20px; border-radius: 8px; border: 2px solid #444; background: #252525; color: white; font-size: 18px; text-align: center; outline: none;}
         .btn-stack { display: flex; flex-direction: column; gap: 10px; }
         button { padding: 15px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 16px; transition: 0.3s; }
         #createBtn { background: #2980b9; color: white; }
         #joinBtn { background: #27ae60; color: white; }
         #botBtn { background: #c0392b; color: white; }
         #myBoard { width: 95vw; max-width: 400px; border: 5px solid #333; border-radius: 8px; }
-        #status-bar { margin-top: 15px; padding: 12px; background: #222; width: 90%; max-width: 380px; text-align: center; border-radius: 8px; color: #f1c40f; }
+        #status-bar { margin-top: 15px; padding: 12px; background: #222; width: 90%; max-width: 380px; text-align: center; border-radius: 8px; color: #f1c40f; font-weight: bold;}
     </style>
 </head>
 <body>
 
     <div class="menu-container">
-        <h2>Sofia's Grandmaster</h2>
+        <h2>Sofia's Chess</h2>
         <input type="text" id="roomCode" placeholder="Enter Code (e.g. 1122)">
         <div class="btn-stack">
             <button id="createBtn" onclick="handleOnline('create')">Create Room</button>
@@ -31,7 +32,7 @@
     </div>
 
     <div id="myBoard"></div>
-    <div id="status-bar">Status: System Ready</div>
+    <div id="status-bar">Status: Ready to Play</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
@@ -46,42 +47,59 @@
         var playerRole = 'w';
         var currentRoom = null;
 
-        // --- BOT LOGIC (Powerful & Fast) ---
-        function getBestMove(game) {
-            let possibleMoves = game.moves();
-            if (possibleMoves.length === 0) return null;
+        // --- Checkmate Animation Function ---
+        function triggerCheckmate(winner) {
+            $('#status-bar').text("CHECKMATE! " + (winner === 'w' ? "White" : "Black") + " WINS! 🎉");
+            
+            // Pataakhe (Confetti) Animation
+            var duration = 5 * 1000;
+            var end = Date.now() + duration;
 
-            // Strategy: Pehle dekho kya koi piece mar raha hai? (Capture moves)
-            let captures = possibleMoves.filter(m => m.includes('x'));
-            if (captures.length > 0) return captures[Math.floor(Math.random() * captures.length)];
+            (function frame() {
+              confetti({ particleCount: 5, angle: 60, spread: 55, origin: { x: 0 }, colors: ['#f1c40f', '#ffffff', '#2980b9'] });
+              confetti({ particleCount: 5, angle: 120, spread: 55, origin: { x: 1 }, colors: ['#f1c40f', '#ffffff', '#27ae60'] });
 
-            // Warna koi bhi best move chuno
-            return possibleMoves[Math.floor(Math.random() * possibleMoves.length)];
+              if (Date.now() < end) { requestAnimationFrame(frame); }
+            }());
         }
 
+        function checkGameStatus() {
+            if (game.in_checkmate()) {
+                let winner = game.turn() === 'w' ? 'b' : 'w';
+                triggerCheckmate(winner);
+            } else if (game.in_draw()) {
+                $('#status-bar').text("GAME DRAW! 🤝");
+            }
+        }
+
+        // --- BOT ENGINE ---
         function makeBotMove() {
             if (game.game_over()) return;
-            let move = getBestMove(game);
+            let moves = game.moves();
+            // Simple smart move: Capture if possible
+            let captures = moves.filter(m => m.includes('x'));
+            let move = captures.length > 0 ? captures[0] : moves[Math.floor(Math.random() * moves.length)];
+            
             game.move(move);
             board.position(game.fen());
-            $('#status-bar').text("Your turn, Sofia!");
+            checkGameStatus();
         }
 
-        // --- BOARD INITIALIZATION ---
         function onDrop(source, target) {
             let move = game.move({ from: source, to: target, promotion: 'q' });
             if (move === null) return 'snapback';
 
-            if (isBotMode) {
-                $('#status-bar').text("Bot is thinking...");
+            checkGameStatus();
+
+            if (isBotMode && !game.game_over()) {
                 window.setTimeout(makeBotMove, 500);
-            } else {
+            } else if (!isBotMode) {
                 socket.emit('chessMove', { move: move, room: currentRoom });
             }
         }
 
         function initBoard(orient) {
-            let config = {
+            board = ChessBoard('myBoard', {
                 draggable: true,
                 position: 'start',
                 orientation: orient || 'white',
@@ -92,36 +110,29 @@
                 },
                 onDrop: onDrop,
                 pieceTheme: 'https://chessboardjs.com/img/chesspieces/wikipedia/{piece}.png'
-            };
-            board = ChessBoard('myBoard', config);
+            });
         }
 
-        // --- BUTTON ACTIONS ---
         function startBot() {
-            isBotMode = true;
-            game = new Chess();
-            initBoard('white');
+            isBotMode = true; game = new Chess(); initBoard('white');
             $('#status-bar').text("Mode: vs Powerful Bot");
         }
 
         function handleOnline(type) {
             let code = $('#roomCode').val();
             if(!code) return alert("Code dalo!");
-            isBotMode = false;
-            currentRoom = code;
             socket.emit('joinRoom', { room: code });
         }
 
         socket.on('playerRole', (data) => {
-            playerRole = data.role;
-            currentRoom = data.room;
+            playerRole = data.role; currentRoom = data.room;
             initBoard(playerRole === 'w' ? 'white' : 'black');
-            $('#status-bar').text("Match Started! You are " + (playerRole === 'w' ? "White" : "Black"));
         });
 
         socket.on('moveFromServer', (move) => {
             game.move(move);
             board.position(game.fen());
+            checkGameStatus();
         });
 
         initBoard('white');
