--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <style>
         body { font-family: 'Segoe UI', sans-serif; background: #121212; color: white; margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; }
         
-        /* Menu Screen */
         #menu-screen { width: 90%; max-width: 400px; text-align: center; background: #1e1e1e; padding: 25px; border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); border: 1px solid #333; display: block; }
         h1 { color: #f1c40f; margin-bottom: 25px; text-transform: uppercase; letter-spacing: 1px; }
         input { width: 85%; padding: 15px; margin-bottom: 20px; border-radius: 10px; border: 2px solid #444; background: #252525; color: white; font-size: 18px; text-align: center; outline: none; }
@@ -18,13 +17,20 @@
         #createBtn { background: #2980b9; }
         #joinBtn { background: #27ae60; }
         #botBtn { background: #c0392b; }
-        button:hover { opacity: 0.9; transform: scale(1.02); }
 
-        /* Game Screen */
         #game-screen { display: none; width: 100%; max-width: 450px; text-align: center; }
         #myBoard { width: 100%; border: 5px solid #333; border-radius: 10px; margin: 10px 0; }
-        #status-bar { padding: 12px; background: #222; border-radius: 8px; color: #f1c40f; font-weight: bold; border: 1px solid #444; margin-bottom: 10px; }
-        .exit-btn { background: #555; padding: 10px 20px; font-size: 14px; width: fit-content; margin: 10px auto; }
+        #status-bar { padding: 12px; background: #222; border-radius: 8px; color: #f1c40f; font-weight: bold; border: 1px solid #444; }
+
+        /* Play Again Pop-up */
+        #game-over-modal { 
+            display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+            background: rgba(30, 30, 30, 0.95); padding: 30px; border-radius: 15px; 
+            box-shadow: 0 0 20px rgba(0,0,0,0.8); z-index: 1000; text-align: center; border: 2px solid #f1c40f;
+        }
+        #game-over-modal h2 { color: #f1c40f; margin-top: 0; }
+        .play-again-btn { background: #27ae60; margin-top: 15px; width: 100%; }
+        .exit-btn { background: #555; margin-top: 10px; width: 100%; }
     </style>
 </head>
 <body>
@@ -42,7 +48,12 @@
     <div id="game-screen">
         <div id="status-bar">Status: Waiting...</div>
         <div id="myBoard"></div>
-        <button class="exit-btn" onclick="location.reload()">EXIT GAME</button>
+    </div>
+
+    <div id="game-over-modal">
+        <h2 id="winner-text">CHECKMATE!</h2>
+        <button class="play-again-btn" onclick="resetGame()">PLAY AGAIN</button>
+        <button class="exit-btn" onclick="location.reload()">MAIN MENU</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -59,8 +70,23 @@
         var currentRoom = null;
 
         function showGameScreen() {
-            document.getElementById('menu-screen').style.display = 'none';
-            document.getElementById('game-screen').style.display = 'block';
+            $('#menu-screen').hide();
+            $('#game-screen').show();
+            $('#game-over-modal').hide();
+        }
+
+        function resetGame() {
+            game.reset();
+            board.start();
+            $('#game-over-modal').hide();
+            $('#status-bar').text(isBotMode ? "vs Powerful Bot" : "Game Restarted!");
+        }
+
+        function triggerCheckmate(winner) {
+            confetti({ particleCount: 200, spread: 80, origin: { y: 0.6 } });
+            $('#status-bar').text("GAME OVER!");
+            $('#winner-text').text(winner + " WINS!");
+            setTimeout(() => { $('#game-over-modal').fadeIn(); }, 1500);
         }
 
         function makeBotMove() {
@@ -69,20 +95,24 @@
             let move = moves.find(m => m.includes('#')) || moves.find(m => m.includes('x')) || moves[Math.floor(Math.random() * moves.length)];
             game.move(move);
             board.position(game.fen());
-            checkWinner();
+            checkGameStatus();
         }
 
-        function checkWinner() {
+        function checkGameStatus() {
             if (game.in_checkmate()) {
-                confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
-                $('#status-bar').text("CHECKMATE! 🎉");
+                let winner = game.turn() === 'w' ? 'Black' : 'White';
+                triggerCheckmate(winner);
+            } else if (game.in_draw()) {
+                $('#winner-text').text("IT'S A DRAW!");
+                $('#game-over-modal').fadeIn();
             }
         }
 
         function onDrop(source, target) {
             let move = game.move({ from: source, to: target, promotion: 'q' });
             if (move === null) return 'snapback';
-            checkWinner();
+            
+            checkGameStatus();
             if (isBotMode && !game.game_over()) {
                 $('#status-bar').text("Bot is thinking...");
                 window.setTimeout(makeBotMove, 600);
@@ -117,7 +147,7 @@
 
         function handleOnline(type) {
             let code = $('#roomCode').val();
-            if(!code) return alert("Pehle code dalo!");
+            if(!code) return alert("Enter Code!");
             isBotMode = false;
             currentRoom = code;
             socket.emit('joinRoom', { room: code });
@@ -128,13 +158,12 @@
             playerRole = data.role;
             currentRoom = data.room;
             initBoard(playerRole === 'w' ? 'white' : 'black');
-            $('#status-bar').text("Match Started! You are " + (playerRole === 'w' ? "White" : "Black"));
         });
 
         socket.on('moveFromServer', (move) => {
             game.move(move);
             board.position(game.fen());
-            checkWinner();
+            checkGameStatus();
         });
     </script>
 </body>
